--- a/css/style.css
+++ b/css/style.css
@@ -1,431 +1,35 @@
-:root {
-    --main-title-color: #FFFFFF;
-    --secondary-title-color: #303030;
-    --main-text-color: #555555;
-    --secondary-text-color: #9DA4BD;
-    --third-text-color: #303030;
-    --accent-color: #FF6C00;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-p, h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 0px;
-    margin-top: 0px;
-}
-ul {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
-}
-.list {
-    list-style: none;
-}
-
-.link {
-    text-decoration: none;
-}
-
-.btn {
-    width: 160px;
-    height: 40px;
 
 
-    color: #FFFFFF;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    background-color: transparent;
 
-    text-transform: uppercase;
-    border: 1px solid #FF6C00;
-    border-radius: 100px;
-}
 
-.btn:hover,
-.btn:focus {
-    background-color: var(--accent-color);
-}
-
+/* @keyframes */
 /* -----HEADER------- */
 
-.container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
-}
-.header {
-    background-color: brown;
-}
-.header .container {
-    display: flex;
-    align-items: center;
-}
-.header__navigation {
-    display: flex;
-    align-items: center;
-}
-.header__logo {
-    margin-right: 70px;
-}
-.header__item {
-    display: inline-block;
-}
-.header__item:not(:last-child) {
-    margin-right: 40px;
-}
 
-.section-title {
-    font-family: 'Raleway', sans-serif;
-    font-size: 42px;
-    font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.05em;
-}
 
-.header__link {
-    display: block;
-    padding-top: 48px;
-    padding-bottom: 48px;
-
-    color: var(--main-title-color);
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 1.33;
-    letter-spacing: 0.1em;
-
-}
-.header__link:hover,
-.header__link:focus {
-    color: var(--accent-color);
-}
-
-.header__right {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-}
-.header__tel {
-    display: block;
-    padding-top: 48px;
-    padding-bottom: 48px;
-    margin-right: 40px;
-
-    color: #FFF;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 1.33;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-}
- 
-.header__button {
-    display: block;
-}
 
 
 /* --------HERO--------- */
 
-.hero .container {
-    display: flex;
-}
-.hero__list {
-    width: 100px;
-    display: flex;
-    margin-right: 52px;
 
-    writing-mode:vertical-lr;
-    transform: rotate(180deg);
-}
-
-.hero-item__link {
-    padding-left: 52px;
-    padding-right: 78px;
-
-    color: #303030;
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.36;
-    letter-spacing: 0.2em;
-}
-
-.hero-item__link:hover,
-.hero-item__link:focus {
-    color: #FF6C00;
-}
-
-.hero__item:not(:last-child) {
-    margin-bottom: 40px;
-} 
-.pre-text {
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-}
-
-.after-text {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
-}
-
-.hero__main {
-    background-color: rgb(42, 30, 30);
-    flex-grow: 1;
-    padding: 272px 0 206px 91px;
-}
-.hero__pre-text {
-    margin-bottom: 20px;
-
-    color: #9DA4BD;
-}
-.hero__title {
-    margin-bottom: 20px;
-
-    color: var(--main-title-color);
-    font-family: 'Raleway', sans-serif;
-    font-size: 72px;
-    font-weight: 700;
-    line-height: 1.18;
-    letter-spacing: 0.05em;
-}
-.hero__text {
-    color: var(--secondary-text-color);
-}
 
 /* -------about--------- */
-.section {
-    padding-top: 130px;
-    padding-bottom: 130px;
-}
-.about .container {
-    display: flex;
-}
-.about__list {
-    margin-right: 64px;
-    display: flex;
-}
-.about__item + .about__item {
-    margin-left: 30px;
-}
-.about__pre-text {
-    margin-bottom: 20px;
-}
-.about__title{
-    margin-bottom: 20px;
-    color: var(--secondary-title-color);
-}
-.about__after-text {
-    margin-bottom: 20px;
 
-    color: #555;
-}
-.about__text {
-    margin-bottom: 40px;
-    max-width: 500px;
-
-    color: --main-text-color;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.86;
-    letter-spacing: 0.02em;
-}
-.about__btn {
-    color: #303030;
-}
-.about__btn:hover,
-.about__btn:focus {
-    color: #FFFFFF;
-}
 
 /* -----------prices---------- */
-.prices {
-    background-color: var(--third-text-color);
-}
-.prices__pre-text {
-    margin-bottom: 20px;
 
-    color: rgba(157, 164, 189, 0.60);
-}
-.prices__title{
-    margin-bottom: 44px;
-
-    color: var(--main-title-color);
-}
-.prices__list-wrap {
-    display: flex;
-    margin-bottom: 50px;
-}
-.prices__list {
-    width: 50%;
-    padding: 30px 40px;
-    
-}
-.prices__item {
-    display: flex;
-    justify-content: space-between;
-}
-.prices__item + .prices__item {
-    margin-top: 20px;
-}
-.prices__item-text {
-    color: var(--secondary-text-color);
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
-}
-.prices__btn {
-    color: #FFFFFF;
-    display: block;
-    margin: 0 auto;
-}
 
 /* -----------reason----------- */
-.reason__wrap {
-    display: flex;
-    justify-content: space-between;
-}
-.reason__left {
-    width: calc(50% - 15px);
-}
-.reason__list {
-    display: flex;
-    width: 370px;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    margin: 0 auto;
-}
-.reason__count {
-    display: block;
-    margin: 6px;
-
-    color:var(--third-text-color);
-    text-align: center;
-    font-size: 42px;
-    font-weight: 700;
-    line-height: 1.36;
-    letter-spacing: 0.05em;
-
-    text-align: center;
-}
-.reason__item {
-    width: 170px;
-    padding: 20px 24px;
-
-    border: 1px solid #303030;
-}
-.reason__item-spec {
-    padding: 20px;
-}
-.reason__item:nth-child(even) {
-    margin-top: 30px;
-}
-.reason__item:nth-child(odd) {
-    margin-right: 30px;
-}
-.reason__item-text {
-    color: var(--third-text-color);
-    text-align: center;
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.36;
-}
-.reason__right {
-    width: calc(50% - 15px);
-}
-.reason__pre-text {
-    margin-bottom: 20px;
-
-    color: var(--third-text-color);
-}
-.reason__title {
-    margin-bottom: 20px;
-
-    color: var(--secondary-title-color);
-}
-.reason__after-text {
-    color: var(--main-text-color);
-}
 
 /* ----------masters------------ */
 
-.masters__pre-text {
-    margin-bottom: 20px;
 
-    color: var(--third-text-color);
-}
-.masters__title {
-    margin-bottom: 44px;
-
-    color: var(--secondary-title-color);
-}
-.masters__list {
-    display: flex;
-}
-.masters__item {
-    color: var(--third-text-color);
-    text-align: center;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.39;
-    letter-spacing: 0.02em;
-}
-.masters__item + .masters__item {
-    margin-left: 30px;
-}
-.masters__item-text {
-    color: #FF6C00;
- 
-}
 /* --------GGALLERY-------- */
-.gallery__pre-text {
-    color: var(--third-text-color);
-}
+
 /* ---------ONLINE-------- */
-.online__title {
-    color: var(--main-title-color);
-}
+
 /* ---------CONTACTS */
-.contacts__title {
-    color: var(--main-title-color);
-}
-.contacts__link,
-.contacts__text{
-    color: var(--secondary-text-color);
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
-    font-style: normal;
-}
-.contacts__subtitle {
-    color: var(--main-title-color);
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-}
+
 /* --------FOOTER--------- */
-.footer__text {
-    color: var(--secondary-text-color);
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.36;
-    letter-spacing: 0.2em;
-    }
-.footer__link {
-    color: var(--third-text-color);
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.36;
-    letter-spacing: 0.2em;
-} 
+
+
